--- a/package.json
+++ b/package.json
@@ -1,28 +1,301 @@
 {
-  "name": "web-encriptor",
-  "displayName": "Mi Extensión",
-  "description": "Descripción de Mi Extensión",
+  "name": "psw",
   "version": "1.0.0",
-  "publisher": "MiEditor",
-  "icon": "./src/ico/icon.png",
-  "engines": {
-    "vscode": "^1.0.0"
-  },
-  "dependencies": {
-    "crypto-js": "^4.1.1",
-    "express": "^4.18.2",
-    "live-server": "^1.2.2",
-    "socket.io": "^4.7.1"
-  },
+  "description": "Es un mini framework el cual se basa en la seguridad",
   "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "acorn": "^8.10.0",
+    "acorn-import-assertions": "^1.9.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "ajv-keywords": "^5.1.0",
+    "ansi-styles": "^3.2.1",
+    "anymatch": "^2.0.0",
+    "apache-crypt": "^1.2.6",
+    "apache-md5": "^1.1.8",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-flatten": "^1.1.1",
+    "array-unique": "^0.3.2",
+    "assign-symbols": "^1.0.0",
+    "async-each": "^1.0.6",
+    "atob": "^2.1.2",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-polyfill-corejs2": "^0.4.4",
+    "babel-plugin-polyfill-corejs3": "^0.8.2",
+    "babel-plugin-polyfill-regenerator": "^0.5.1",
+    "base": "^0.11.2",
+    "base64id": "^2.0.0",
+    "basic-auth": "^2.0.1",
+    "batch": "^0.6.1",
+    "bcryptjs": "^2.4.3",
+    "binary-extensions": "^1.13.1",
+    "body-parser": "^1.20.1",
+    "braces": "^2.3.2",
+    "browserslist": "^4.21.9",
+    "buffer-from": "^1.1.2",
+    "bytes": "^3.1.2",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "caniuse-lite": "^1.0.30001517",
+    "chalk": "^2.4.2",
+    "chokidar": "^2.1.8",
+    "chrome-trace-event": "^1.0.3",
+    "class-utils": "^0.3.6",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colors": "^1.4.0",
+    "commander": "^2.20.3",
+    "common-path-prefix": "^3.0.0",
+    "component-emitter": "^1.3.0",
+    "connect": "^3.7.0",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "convert-source-map": "^1.9.0",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "copy-descriptor": "^0.1.1",
+    "core-js-compat": "^3.31.1",
+    "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "debug": "^2.6.9",
+    "decode-uri-component": "^0.2.2",
+    "define-property": "^2.0.2",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "duplexer": "^0.1.2",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.4.464",
+    "encodeurl": "^1.0.2",
+    "engine.io": "^6.5.1",
+    "engine.io-parser": "^5.1.0",
+    "enhanced-resolve": "^5.15.0",
+    "es-module-lexer": "^1.3.0",
+    "escalade": "^3.1.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-scope": "^5.1.1",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "etag": "^1.8.1",
+    "event-stream": "^3.3.4",
+    "events": "^3.3.0",
+    "expand-brackets": "^2.1.4",
+    "express": "^4.18.2",
+    "extend-shallow": "^2.0.1",
+    "extglob": "^2.0.4",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "faye-websocket": "^0.11.4",
+    "fill-range": "^4.0.0",
+    "finalhandler": "^1.2.0",
+    "find-cache-dir": "^4.0.0",
+    "find-up": "^6.3.0",
+    "for-in": "^1.0.2",
+    "forwarded": "^0.2.0",
+    "fragment-cache": "^0.2.1",
+    "fresh": "^0.5.2",
+    "from": "^0.1.7",
+    "function-bind": "^1.1.1",
+    "gensync": "^1.0.0-beta.2",
+    "get-intrinsic": "^1.2.1",
+    "get-value": "^2.0.6",
+    "glob-parent": "^3.1.0",
+    "glob-to-regexp": "^0.4.1",
+    "globals": "^11.12.0",
+    "graceful-fs": "^4.2.11",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "http-auth": "^3.1.3",
+    "http-errors": "^2.0.0",
+    "http-parser-js": "^0.5.8",
+    "iconv-lite": "^0.4.24",
+    "inherits": "^2.0.4",
+    "ipaddr.js": "^1.9.1",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-binary-path": "^1.0.1",
+    "is-buffer": "^1.1.6",
+    "is-core-module": "^2.12.1",
+    "is-data-descriptor": "^1.0.0",
+    "is-descriptor": "^1.0.2",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^3.0.0",
+    "is-plain-object": "^2.0.4",
+    "is-windows": "^1.0.2",
+    "is-wsl": "^1.1.0",
+    "isarray": "^1.0.0",
+    "isobject": "^3.0.1",
+    "jest-worker": "^27.5.1",
+    "js-tokens": "^4.0.0",
+    "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-schema-traverse": "^1.0.0",
+    "json5": "^2.2.3",
+    "kind-of": "^3.2.2",
+    "live-server": "^1.2.2",
+    "loader-runner": "^4.3.0",
+    "locate-path": "^7.2.0",
+    "lodash.debounce": "^4.0.8",
+    "lru-cache": "^5.1.1",
+    "map-cache": "^0.2.2",
+    "map-stream": "^0.1.0",
+    "map-visit": "^1.0.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "merge-stream": "^2.0.0",
+    "methods": "^1.1.2",
+    "micromatch": "^3.1.10",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mixin-deep": "^1.3.2",
+    "morgan": "^1.10.0",
+    "ms": "^2.0.0",
+    "nanomatch": "^1.2.13",
+    "negotiator": "^0.6.3",
+    "neo-async": "^2.6.2",
+    "node-releases": "^2.0.13",
+    "normalize-path": "^3.0.0",
+    "object-assign": "^4.1.1",
+    "object-copy": "^0.1.0",
+    "object-inspect": "^1.12.3",
+    "object-visit": "^1.0.1",
+    "object.pick": "^1.3.0",
+    "on-finished": "^2.4.1",
+    "on-headers": "^1.0.2",
+    "opn": "^6.0.0",
+    "p-limit": "^4.0.0",
+    "p-locate": "^6.0.0",
+    "parseurl": "^1.3.3",
+    "pascalcase": "^0.1.1",
+    "path-dirname": "^1.0.2",
+    "path-exists": "^5.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-to-regexp": "^0.1.7",
+    "pause-stream": "^0.0.11",
+    "picocolors": "^1.0.0",
+    "pkg-dir": "^7.0.0",
+    "posix-character-classes": "^0.1.1",
+    "process-nextick-args": "^2.0.1",
+    "proxy-addr": "^2.0.7",
+    "proxy-middleware": "^0.15.0",
+    "punycode": "^2.3.0",
+    "qs": "^6.11.0",
+    "randombytes": "^2.1.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readable-stream": "^2.3.8",
+    "readdirp": "^2.2.1",
+    "regenerate": "^1.4.2",
+    "regenerate-unicode-properties": "^10.1.0",
+    "regenerator-runtime": "^0.13.11",
+    "regenerator-transform": "^0.15.1",
+    "regex-not": "^1.0.2",
+    "regexpu-core": "^5.3.2",
+    "regjsparser": "^0.9.1",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.4",
+    "repeat-string": "^1.6.1",
+    "require-from-string": "^2.0.2",
+    "resolve": "^1.22.2",
+    "resolve-url": "^0.2.1",
+    "ret": "^0.1.15",
+    "safe-buffer": "^5.2.1",
+    "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
+    "schema-utils": "^4.2.0",
+    "semver": "^6.3.1",
+    "send": "^0.18.0",
+    "serialize-javascript": "^6.0.1",
+    "serve-index": "^1.9.1",
+    "serve-static": "^1.15.0",
+    "set-value": "^2.0.1",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.4",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "socket.io": "^4.7.1",
+    "socket.io-adapter": "^2.5.2",
+    "socket.io-parser": "^4.2.4",
+    "source-map": "^0.5.7",
+    "source-map-resolve": "^0.5.3",
+    "source-map-support": "^0.5.21",
+    "source-map-url": "^0.4.1",
+    "split": "^0.3.3",
+    "split-string": "^3.1.0",
+    "static-extend": "^0.1.2",
+    "statuses": "^2.0.1",
+    "stream-combiner": "^0.0.4",
+    "string_decoder": "^1.1.1",
+    "supports-color": "^5.5.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "tapable": "^2.2.1",
+    "terser": "^5.19.1",
+    "terser-webpack-plugin": "^5.3.9",
+    "through": "^2.3.8",
+    "to-fast-properties": "^2.0.0",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^2.1.1",
+    "toidentifier": "^1.0.1",
+    "type-is": "^1.6.18",
+    "unicode-canonical-property-names-ecmascript": "^2.0.0",
+    "unicode-match-property-ecmascript": "^2.0.0",
+    "unicode-match-property-value-ecmascript": "^2.1.0",
+    "unicode-property-aliases-ecmascript": "^2.1.0",
+    "union-value": "^1.0.1",
+    "unix-crypt-td-js": "^1.1.4",
+    "unpipe": "^1.0.0",
+    "unset-value": "^1.0.0",
+    "upath": "^1.2.0",
+    "update-browserslist-db": "^1.0.11",
+    "uri-js": "^4.4.1",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "vary": "^1.1.2",
+    "watchpack": "^2.4.0",
+    "webpack": "^5.88.2",
+    "webpack-sources": "^3.2.3",
+    "websocket-driver": "^0.7.4",
+    "websocket-extensions": "^0.1.4",
+    "ws": "^8.11.0",
+    "yallist": "^3.1.1",
+    "yocto-queue": "^1.0.0"
   },
-  "keywords": [],
-  "author": "",
+  "devDependencies": {},
+  "scripts": {
+    "test": "node main.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/owellandry/psw.git"
+  },
+  "keywords": [
+    "security",
+    "framework",
+    "authentication",
+    "code"
+  ],
+  "author": "owellandry",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/preset-env": "^7.22.9",
-    "babel-loader": "^9.1.3"
-  }
+  "bugs": {
+    "url": "https://github.com/owellandry/psw/issues"
+  },
+  "homepage": "https://github.com/owellandry/psw#readme"
 }
