--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "psw",
+  "name": "ond",
   "version": "2.0.0",
   "description": "Es un mini framework el cual se basa en la seguridad",
   "main": "main.js",
